--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vue-handsontable-element",
-    "version": "4.9.8",
+    "version": "4.9.9",
     "description": "handsontable for vue",
     "author": "Maple <fenghu0913@gmail.com>",
     "license": "ISC",
@@ -14,7 +14,7 @@
     "scripts": {
         "clean": "rimraf dist",
         "build": "npm run clean && cross-env NODE_ENV=production webpack --progress --hide-modules",
-        "release": "npm run build && npm publish"
+        "release": "npm run build"
     },
     "jest": {
         "moduleFileExtensions": [
