--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vue-handsontable-element",
-    "version": "5.0.3",
+    "version": "5.0.7",
     "description": "handsontable for vue",
     "author": "Maple <fenghu0913@gmail.com>",
     "license": "ISC",
@@ -13,8 +13,7 @@
     ],
     "scripts": {
         "clean": "rimraf dist",
-        "build": "npm run clean && cross-env NODE_ENV=production webpack --progress --hide-modules",
-        "release": "npm run build"
+        "build": "npm run clean && cross-env NODE_ENV=production webpack --progress --hide-modules"
     },
     "jest": {
         "moduleFileExtensions": [
@@ -50,7 +49,7 @@
         "babel-preset-stage-2": "^6.24.1",
         "cross-env": "^3.0.0",
         "css-loader": "^0.25.0",
-        "custom-handsontable": "^1.0.6",
+        "custom-handsontable": "^1.0.8",
         "element-ui": "^2.13.2",
         "file-loader": "^0.9.0",
         "jest": "^22.4.4",
